# AitransSolution

./: .gitignore  README.md  决赛测评方案.md
README/: 决赛docker镜像使用.md  决赛测评方案.md
doc/: 决赛QA.md  决赛docker镜像使用.md  决赛solution输入和示例.md
final_datasets/: README.md
final_datasets/blocks/: day1_train_block.txt  day2_train_block.txt  day3_train_block.txt
final_datasets/networks/: README.md  traces_117.txt  traces_118.txt  traces_97.txt  traces_98.txt
solution_demo/call_python/: hello_python3.py  solution.cxx  solution.hxx
solution_demo/call_torch_model/: CMakeLists.txt  solution.cxx  torch_model.py
solution_demo/reno/: solution.cxx
solution_demo/rl_torch_demo/: CMakeLists.txt  demo_rl_torch.py  make.sh  readme.md  solution.cxx
src/aitrans/: solution.cxx
src/aitrans/call_python/: solution.cxx  solution.hxx
src/aitrans/docker_demo/: solution.cxx
src/aitrans/get_time/: get_time.hxx
src/aitrans/include/: aitrans.hxx
src/aitrans/reno/: solution.cxx
tools_demo/: main.py  qoe.py  test.cxx  traffic_control.py
